2010-08-05  David Reveman  <davidr@novell.com>

	* effect.h:
	* effect.cpp: Add MAX_SHADOW_DEPTH and clamp drop shadow
	depth value to 0.0-300.0 range.

	* effect.cpp: Clamp drop shadow opacity value to 0.0-1.0
	range.

	* effect.cpp (UpdateShader): Pre-multiply shadow color.

	* effect.cpp (Render): Fix typo that had rgba values set
	incorrectly. We should of course multiply r/g/b components
	with the opacity value.

2010-08-04  David Reveman  <davidr@novell.com>

	* projection.cpp (UpdateProjection): Fix translate direction of
	LocalOffsetY.

	* uielement.cpp (DoRender): Only call Render when
	ContextNode::GetCr return a valid cairo context.

2010-08-03  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (UpdateIdleStatus): Renamed from
	UpdateIsDownloading().
	(TileOpened): Don't update IsIdle/IsDownloading status here, wait
	for ::Render(). We don't want IsIdle to be set to true or
	IsDownloading to be set to false before we get a chance to render
	the result.
	(TileFailed): Same.
	(StopDownloading): Same.
	(OnPropertyChanged): Instead of calling UpdateIsDownloading()
	here, Invalidate () and let the next render take care of that.
	(Render): Only ever allow IsIdle to be set to true and
	IsDownloading to be set to false here, *after* we've rendered the
	scene.
	(ProcessTile): Cache a NULL image if we fail to get the tile's
	image surface.

2010-08-03  Jeffrey Stedfast  <fejj@novell.com>

	* bitmapsource.cpp (GetSurface): If the cairo context is NULL,
	then assume that the native surface is an image surface.

	* multiscaleimage.cpp (ProcessTile): Split out from Render(); now
	called from TileOpened() rather than waiting until Render().

2010-08-02  David Reveman  <davidr@novell.com>

	* uielement.cpp: Apply affine transformation in PreRender
	and cleanup intermediate rendering by using GetBitmapExtents
	function.

	* runtime.h:
	* runtime.cpp: Add GetBitmapExtents function to ContextNode
	class.

2010-07-31  David Reveman  <davidr@novell.com>
